--- a/WinsockSSLDemo/WinsockSSLDemo.csproj
+++ b/WinsockSSLDemo/WinsockSSLDemo.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Certificate.cs" />
     <Compile Include="frmMain.cs">
       <SubType>Form</SubType>
     </Compile>
